Enable ServiceCommandTest